<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.easylearn.audioActivity">


    <Button
      android:id="@+id/playButton"
      android:layout_width="190dp"
      android:layout_height="65dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="594dp"
      android:text="@string/play"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.508"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

    <Button
      android:id="@+id/stopButton"
      android:layout_width="224dp"
      android:layout_height="80dp"
      android:layout_marginBottom="76dp"
      android:layout_marginEnd="528dp"
      android:layout_marginStart="528dp"
      android:layout_marginTop="62dp"
      android:text="@string/stop"
      app:layout_constraintBottom_toTopOf="@+id/playButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/startRecord" />

    <Button
      android:id="@+id/startRecord"
      android:layout_width="245dp"
      android:layout_height="75dp"
      android:layout_marginBottom="62dp"
      android:layout_marginEnd="541dp"
      android:layout_marginStart="500dp"
      android:layout_marginTop="40dp"
      android:text="@string/startrecord"
      app:layout_constraintBottom_toTopOf="@+id/stopButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.895"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/stopRecord" />

  <Button
    android:id="@+id/stopRecord"
    android:layout_width="268dp"
    android:layout_height="85dp"
    android:layout_marginBottom="40dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="167dp"
    android:text="@string/stoprecord"
    app:layout_constraintBottom_toTopOf="@+id/startRecord"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.49"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  </android.support.constraint.ConstraintLayout>
